<resources>
    <string name="app_name">TicTacToe</string>

    <string name="tic">Tic</string>
    <string name="tac">Tac</string>
    <string name="toe">Toe</string>

    <string name="tic_tac_toe">Tic Tac Toe</string>

    <string name="confirm_exit">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_reset_notification">
        Board dimension has been modified and game would be reset.\n\nDo you want to continue?
    </string>

    <string name="choose_play_mode">Choose your play mode</string>
    <string name="with_ai">With AI</string>
    <string name="with_a_friend">With A Friend</string>

    <string name="enter_your_name">Enter your name</string>
    <string name="enter_names">Enter names</string>
    <string name="hint_player_1">Player 1</string>
    <string name="hint_player_2">Player 2</string>
    <string name="hint_ai">AI</string>
    <string name="continue_text">Continue</string>

    <string name="x_wins">%s won</string>
    <string name="reset">Reset</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit</string>

    <string name="pick_your_side">Pick your side</string>
    <string name="player1_pick">%s, pick your side</string>
    <string name="turn">turn</string>

    <string name="touch_to_exit">Touch again to exit</string>
    <string name="choose_another_name">Name "AI" is reserved for computer</string>

    <string name="first_player">P1</string> <!-- Denotes first player -->
    <string name="second_player">P2</string> <!-- Denotes second player -->
    <string name="empty">_</string>
    <string name="draw">Draw</string>
    <string name="pending">Pending</string>

    <string name="win_direction_row">Row</string>
    <string name="win_direction_col">Column</string>
    <string name="win_direction_lead_diagonal">Leading diagonal</string>
    <string name="win_direction_opp_lead_diagonal">Opposite leading diagonal</string>
    <string name="win_direction_none">None</string>

    <string name="vibration">Vibration</string>
    <string name="board_dimension">Board dimension</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="random">Random</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="settings_content_desc">Setting</string>
    <string name="welcome_to_tic_tac_toe">Welcome to TIC-TAC-TOE</string>
    <string name="play_game">Play Game</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="person">person</string>
    <string name="who_play_first">Who Play First</string>
    <string name="x">X</string>
    <string name="_0">0</string>
    <string name="number_of_players">Number of Players</string>
    <string name="title_activity_history">HistoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="game">Game</string>
    <string name="winner">Winner</string>
    <string name="piece">Piece</string>

</resources>