<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:id="@+id/historyItemSl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/historyItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/hint_player_1"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/historyItemPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/x"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>